freest/test/prog/Invalid/Linearity/LinArgNotConsumed/LinArgNotConsumed.fst
module LinArgNotConsumed where

f : !Int -> Char
f shouldBeConsumed = 'a'

main : Int
main = 5
